<resources>
    <string name="app_name">随身听</string>
    <string name="rationale_message">请将APP的各项权限开启</string>
    <string name="title_settings_perm">权限设置</string>
    <string name="setting">去设置</string>
    <string name="cancel">取消</string>

    <string name="config_address">首次使用需要配置服务器地址信息：</string>
    <string name="server_address">服务器地址</string>
    <string name="next_step">下一步</string>

    <string name="ali_accessibility_description">驰迅科技提供: 支付宝辅助</string>
    <string name="wx_accessibility_description">驰迅科技提供: 微信辅助</string>
    <string name="upload">上传</string>
    <string name="csv">生成CSV</string>
    <string name="wechat_init">微信随便截</string>
    <string name="ali_login">支付宝登陆</string>
    <string name="wechat_login">微信登陆</string>
    <string name="bank_login">银行登陆</string>
    <string name="input_address">请输入您的服务器地址：</string>
    <string name="address_des">(服务器地址由您的服务商提供)</string>
    <string name="init_ali">支付宝随便截</string>
    <string name="exit_account">退出账号</string>
    <string name="login">登陆</string>
    <string name="curr_user">当前用户：</string>
    <string name="aisle">通道</string>
    <string name="money_pay">收款金额</string>
    <string name="money_notice">通知金额</string>
    <string name="money">通知金额</string>
    <string name="success_rate">成功率</string>
    <string name="info_observe">监控信息</string>
    <string name="refresh">刷新</string>
    <string name="watch_order">查看订单</string>
    <string name="set">设置</string>
    <string name="dama">打码</string>
    <string name="order_detail">订单详情</string>
    <string name="all">全部</string>
    <string name="paying">支付中</string>
    <string name="noticeing">通知中</string>
    <string name="success">成功</string>
    <string name="close">关闭</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aisle_detail">通知详情</string>
    <string name="fail">失败</string>
    <string name="bu_aisle">补通知</string>
    <string name="no_pattern">未匹配</string>
    <string name="warning_aisle">删除通道为不可逆操作，请谨慎操作！</string>
    <string name="showAll">全部显示</string>
    <string name="hide">隐藏</string>
    <string name="exit">退出</string>
    <string name="version">2019.10.28</string>
    <string name="check">校对重复通知</string>
    <string name="yun_login">云闪付登陆</string>
    <string name="qq_login">QQ登录</string>
    <string-array name="close_time">
        <item>1分钟</item>
        <item>2分钟</item>
        <item>3分钟</item>
        <item>5分钟</item>
        <item>10分钟</item>
        <item>永不关闭</item>
    </string-array>
</resources>
