<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_show_all"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/showAll"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order_manager"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/order_detail"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/set"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dama"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/dama"
        app:showAsAction="never" />
</menu>