<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="com.fintech.sst.ui.activity.aisle.AisleManagerActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="40sp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="16sp"/>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@mipmap/bg_title_aisle_manager" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@mipmap/photo"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/curr_user"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvUser"
        app:layout_constraintTop_toBottomOf="@+id/tvUser">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/et_aisle"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/switch_aisle"
                app:layout_constraintStart_toEndOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@mipmap/icon_success_rate"
                android:drawablePadding="10dp"
                android:text="@string/success_rate"
                android:textColor="#515151"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:drawableLeft="@mipmap/icon_aisle_manger"
                android:drawablePadding="10dp"
                android:text="@string/aisle"
                android:textColor="#515151"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@mipmap/icon_amount"
                android:drawablePadding="10dp"
                android:text="@string/money"
                android:textColor="#515151"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/et_successRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/et_aisle"
                app:layout_constraintStart_toEndOf="@+id/textView6" />

            <TextView
                android:id="@+id/tv_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/refresh"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@+id/switch_aisle"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <Switch
                android:id="@+id/switch_aisle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:background="@drawable/toggle_aisle_manager"
                android:thumb="@null"
                android:track="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <EditText
                android:id="@+id/et_money"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="@+id/et_aisle"
                app:layout_constraintStart_toEndOf="@+id/textView3" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/recycler_bg_aisle_manager"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/btnOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:drawableStart="@mipmap/icon_order"
        android:drawablePadding="5dp"
        android:gravity="left|center"
        android:paddingStart="32dp"
        android:text="@string/watch_order"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"
        android:background="@drawable/shape_order_aisle_manager_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSetting" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:drawableStart="@mipmap/icon_setting"
        android:drawablePadding="5dp"
        android:gravity="left|center"
        android:paddingLeft="42dp"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/set"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/shape_setting_aisle_manager_normal"
        app:layout_constraintEnd_toStartOf="@+id/btnOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnOrder" />

</android.support.constraint.ConstraintLayout>
